--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "youch-terminal": "^2.1.3"
   },
   "dependencies": {
+    "@adonisjs/bodyparser": "^8.1.3",
     "@adonisjs/core": "^5.6.0",
     "@adonisjs/lucid": "^17.2.0",
     "@adonisjs/repl": "^3.1.0",
+    "adonis5-swagger": "^1.4.0",
     "luxon": "^2.3.2",
     "pg": "^8.7.3",
     "proxy-addr": "^2.0.7",
